# WAGO

./: .npmrc  .vercelignore  LICENSE  README.md  com.wago.cloudflared.plist  com.wago.docker.plist  com.wago.ngrok.plist  docker-compose.yml  package.json  setup-oracle.sh  start-tunnel.sh  start-web.sh  vercel.json
.github/workflows/: deploy-api.yml  release-cli.yml
api/: test.js
apps/api/: package.json  vercel.json
apps/api/src/: app.module.ts  main.ts  vercel.ts
apps/api/src/auth/: auth.guard.ts  tokens.controller.ts
apps/api/src/connections/: connections.controller.spec.ts  connections.controller.ts
apps/api/src/events/: events.controller.spec.ts  events.controller.ts  events.module.ts  webhook-delivery.processor.ts
apps/api/src/health/: health.service.spec.ts  health.service.ts
apps/api/src/queue/: message-queue.processor.ts  notifications.controller.ts  queue.controller.ts  queue.dto.ts  queue.module.ts  queue.service.ts
apps/api/src/waha/: anti-spam.service.ts  (+2 more)
apps/web/: astro.config.mjs  eslint.config.mjs  next.config.mjs  package.json  vercel.json
apps/web/.source/: browser.ts  server.ts
apps/web/src/: middleware.ts
cli/: go.mod  main.go
cli/cmd/: billing.go  claude.go  connections.go  e2e.go  health.go  login.go  root.go  tokens.go  webhooks.go
cli/internal/api/: client.go
sdks/channel/: package.json
sdks/cli-npm/: install.js  package.json
sdks/mcp/: pyproject.toml
sdks/python/: pyproject.toml
sdks/typescript/: package.json
terraform/: README.md  variables.tf
terraform/extra-manifests/: api-ingress.yaml.tpl
(+35 files in other folders)
